<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <TextView
        android:id="@+id/text_setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_set"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginLeft="50dp"
        android:textColor="@android:color/white"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/panel_connect_mode_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_setting_title"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/panel_connect_mode_udp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_info"
                    android:textSize="20sp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">
                <TextView
                    android:id="@+id/text_access_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_cloud_server_ip"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    />

                <EditText
                    android:id="@+id/edit_access_ip"
                    android:layout_width="250sp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/text_access_ip"
                    android:digits="@string/ip_digits"
                    android:text="10.0.3.115"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_access_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_cloud_server_port"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edit_access_port"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txt_access_port"
                    android:inputType="numberDecimal"
                    android:text="8188"
                    android:textSize="20sp" />

            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
